block mouse option to use clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,7 @@ bind -n F12 next
 #set -g mouse-select-pane off
 #set -g mouse-select-window off
 #set -g mouse-resize-pane off
-set-option -g mouse on
+# 20180315 : block due to cannot use clipboard
+#set-option -g mouse on
 
 setw -g mode-keys vi
