--- a/alacritty_win.yml
+++ b/alacritty_win.yml
@@ -19,19 +19,22 @@ window:
 # Font Customization
 font:
   normal:
-    family: Consolas #Hack #Fira Code
+    #family: Consolas #Hack #Fira Code
+    family: Hack Nerd Font Mono
     style: Regular
   bold:
-    family: Consolas #Hack #Fira Code
+    #family: Consolas #Hack #Fira Code
+    family: Hack Nerd Font Mono
     style: Bold
   italic:
-    family: Consolas #Fira Code
+    #family: Consolas #Hack #Fira Code
+    family: Hack Nerd Font Mono
     style: Italic
   #size: 13.25
-  size: 11
+  size: 10
   offset:
     x: 0
-    y: 0
+    y: 1
   glyph_offset:
     x: 0
     y: 0
@@ -117,6 +120,7 @@ colors:
   #   `- { index: 16, color: '0xff00ff' }`
   #
   indexed_colors: []
+
 cursor:
   style: Block
   unfocused_hollow: true
@@ -126,7 +130,7 @@ cursor:
 # You can set `shell.program` to the path of your favorite shell, e.g. `/bin/fish`.
 # Entries in `shell.args` are passed unmodified as arguments to the shell.
 shell:
-  program: bash #cmd
+  program: cmd
   #args:
   #  - --login
 
